[gd_scene load_steps=3 format=3 uid="uid://2b2tl71ij0nt"]

[ext_resource type="FontFile" uid="uid://nj5b3hat322u" path="res://Fonts/04B_30__.TTF" id="1_6m7bq"]
[ext_resource type="Script" path="res://LevelSelection.gd" id="1_vjpat"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vjpat")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1154.0
offset_bottom = 650.0
color = Color(0, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -132.0
offset_right = 350.0
offset_bottom = 132.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_fonts/font = ExtResource("1_6m7bq")
theme_override_font_sizes/font_size = 51
text = "Select Level:"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 23

[node name="LevelSelectionButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_6m7bq")
theme_override_font_sizes/font_size = 29
text = "Level One -  The Descent"

[node name="LevelSelectionButton2" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_6m7bq")
theme_override_font_sizes/font_size = 29
text = "Level Two - Spotted"

[node name="LevelSelectionButton3" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_6m7bq")
theme_override_font_sizes/font_size = 29
text = "Level Three - Armed Response"

[node name="LevelSelectionButton4" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_fonts/font = ExtResource("1_6m7bq")
theme_override_font_sizes/font_size = 29
text = "Level Four"

[node name="LevelSelectionButton5" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_fonts/font = ExtResource("1_6m7bq")
theme_override_font_sizes/font_size = 29
text = "Level Five"

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_right = 122.0
offset_bottom = 49.0
theme_override_fonts/font = ExtResource("1_6m7bq")
theme_override_font_sizes/font_size = 29
text = "Back"

[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/LevelSelectionButton" to="." method="_on_level_selection_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/LevelSelectionButton2" to="." method="_on_level_selection_button_2_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/LevelSelectionButton3" to="." method="_on_level_selection_button_3_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/LevelSelectionButton4" to="." method="_on_level_selection_button_4_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/LevelSelectionButton5" to="." method="_on_level_selection_button_5_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
